@@ -164,6 +164,9 @@ gretl_array *get_array_by_name (const char *name);
 
 gretl_array *get_strings_array_by_name (const char *name);
 
+gretl_array *get_strings_array_from_series (DATASET *dset,
+					    int v, int *err);
+
 gretl_array *gretl_array_pull_from_stack (const char *name,
 					  int *err);
 
